# ash

./: Cargo.toml  README.md
ash_core/: Cargo.toml
ash_core/src/: coords.rs  error.rs  hash.rs  hash_simd.rs  interpolation.rs  lib.rs  traits.rs  types.rs
ash_core/src/marching_cubes/: algorithm.rs  mod.rs  tables.rs
ash_core/tests/: comprehensive.rs
ash_io/: Cargo.toml
ash_io/src/: config.rs  error.rs  lib.rs
ash_io/src/convert/: mod.rs  obj.rs  obj_import.rs
ash_io/src/format/: ash.rs  header.rs  mod.rs
ash_io/src/memory/: batch_lookup.rs  block_map.rs  builder.rs  grid.rs  mod.rs  storage.rs
ash_io/src/shared/: layout.rs  mod.rs  view.rs  writer.rs
ash_io/src/spatial/: bvh.rs  mod.rs  narrow_band.rs
ash_rs/: Cargo.toml
ash_rs/benches/: query_bench.rs
ash_rs/src/: builder.rs  error.rs  grid.rs  io.rs  lib.rs  mesh.rs  query.rs  shared.rs
ash_rs/src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
ash_rs/tests/: boundary_conditions.rs  concurrent_safety.rs  correctness.rs  integration.rs  mathematical_accuracy.rs  serialization.rs  shared_memory.rs  simd_correctness.rs
examples/: Cargo.toml
examples/output/: landscape_roundtrip.ash
examples/src/: benchmark_optimizations.rs  benchmark_suite.rs  mesh_extraction.rs  obj_roundtrip.rs
neural_ash/: Cargo.toml  trained_sphere.ash
neural_ash/examples/: denoising_tsdf.rs
neural_ash/src/: error.rs  lib.rs
neural_ash/src/config/: grid.rs  mod.rs  network.rs  training.rs
neural_ash/src/data/: depth_camera.rs  mod.rs  point_cloud.rs  sensor.rs
neural_ash/src/export/: ash_file.rs  discretize.rs  mod.rs
neural_ash/src/grid/: diff_grid.rs  gradient_accumulator.rs  interpolation.rs  mod.rs  provider.rs  tensor_storage.rs
neural_ash/src/loss/: mod.rs  normal.rs  regularization.rs  sdf.rs
neural_ash/src/nn/: mlp.rs  mod.rs
neural_ash/src/nn/decoder/: mod.rs  sdf.rs  semantic.rs
neural_ash/src/nn/encoder/: fourier.rs  mod.rs  pointnet.rs
neural_ash/src/online/: mod.rs  scheduler.rs  sync.rs  updater.rs
neural_ash/src/training/: batch.rs  checkpoint.rs  metrics.rs  mod.rs  optimizer.rs  trainer.rs
neural_ash/tests/: grid_tests.rs  integration_tests.rs  loss_tests.rs
